@@ -1,179 +1,189 @@
 task testCassandra(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.CassandraCategory'
-    }
-    onlyIf {
-        "CASSANDRA".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Cassandra")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.CassandraCategory"
     }
 }
 
 task testCosmosDb(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.CosmosDbCategory'
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "CosmosDb")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.CosmosDbCategory"
     }
-    onlyIf {
-        "COSMOSDB".equalsIgnoreCase(rootProject.testCategoryType)
+}
+
+task testAWSS3(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "AmazonWebServicesS3Category")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.AmazonWebServicesS3Category"
+    }
+}
+
+task testRadius(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Radius")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.RadiusCategory"
     }
 }
 
 task testCouchbase(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.CouchbaseCategory'
-    }
-    onlyIf {
-        "COUCHBASE".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Couchbase")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.CouchbaseCategory"
     }
 }
 
 task testCouchDb(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.CouchDbCategory'
-    }
-    onlyIf {
-        "COUCHDB".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "CouchDb")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.CouchDbCategory"
     }
 }
 
 task testMySQL(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.MySQLCategory'
-    }
-    onlyIf {
-        "MYSQL".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "MySQL")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.MySQLCategory"
     }
 }
 
 task testPostgres(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.PostgresCategory'
-    }
-    onlyIf {
-        "POSTGRES".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testDynamoDb(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.DynamoDbCategory'
-    }
-    onlyIf {
-        "DYNAMODB".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testFileSystem(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.FileSystemCategory'
-    }
-    onlyIf {
-        "FILESYSTEM".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testIgnite(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.IgniteCategory'
-    }
-    onlyIf {
-        "IGNITE".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testInfluxDb(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.InfluxDbCategory'
-    }
-    onlyIf {
-        "INFLUXDB".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testLdap(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.LdapCategory'
-    }
-    onlyIf {
-        "LDAP".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testMail(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.MailCategory'
-    }
-    onlyIf {
-        "MAIL".equalsIgnoreCase(rootProject.testCategoryType)
-    }
-}
-
-task testMemcached(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.MemcachedCategory'
-    }
-    onlyIf {
-        "MEMCACHED".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Postgres")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.PostgresCategory"
     }
 }
 
 task testMsSqlServer(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.MsSqlServerCategory'
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "MsSqlServer")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.MsSqlServerCategory"
     }
-    onlyIf {
-        "MSSQLSERVER".equalsIgnoreCase(rootProject.testCategoryType)
+}
+
+task testMariaDb(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "MariaDb")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.MariaDbCategory"
+    }
+}
+
+task testDynamoDb(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "DynamoDb")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.DynamoDbCategory"
+    }
+}
+
+task testFileSystem(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "FileSystem")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.FileSystemCategory"
+    }
+}
+
+task testIgnite(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Ignite")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.IgniteCategory"
+    }
+    def list = []
+    list.add("--add-exports")
+    list.add("java.base/jdk.internal.misc=ALL-UNNAMED")
+    list.add("--add-exports")
+    list.add("java.base/sun.nio.ch=ALL-UNNAMED")
+    jvmArgs = list
+}
+
+task testInfluxDb(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "InfluxDb")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.InfluxDbCategory"
+    }
+}
+
+task testLdap(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Ldap")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.LdapCategory"
+    }
+}
+
+task testMail(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Mail")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.MailCategory"
+    }
+}
+
+task testRestful(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "RestfulApi")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.RestfulApiCategory"
+    }
+}
+
+task testMemcached(type: Test) {
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Memcached")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.MemcachedCategory"
     }
 }
 
 task testMongoDb(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.MongoDbCategory'
-    }
-    onlyIf {
-        "MONGODB".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "MongoDb")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.MongoDbCategory"
     }
 }
 
 task testRedis(type: Test) {
-    useJUnit {
-        includeCategories 'org.apereo.cas.category.RedisCategory'
-    }
-    onlyIf {
-        "REDIS".equalsIgnoreCase(rootProject.testCategoryType)
+    enabled = shouldTest(project.sourceSets.test.java.srcDirs, "Redis")
+    useJUnitPlatform {
+        includeTags "org.apereo.cas.category.RedisCategory"
     }
 }
 
 test {
     include "**/*Tests.*"
-    useJUnit {
-        excludeCategories 'org.apereo.cas.category.MailCategory'
-        excludeCategories 'org.apereo.cas.category.CassandraCategory'
-        excludeCategories 'org.apereo.cas.category.CosmosDbCategory'
-        excludeCategories 'org.apereo.cas.category.CouchbaseCategory'
-        excludeCategories 'org.apereo.cas.category.DynamoDbCategory'
-        excludeCategories 'org.apereo.cas.category.FileSystemCategory'
-        excludeCategories 'org.apereo.cas.category.IgniteCategory'
-        excludeCategories 'org.apereo.cas.category.InfluxDbCategory'
-        excludeCategories 'org.apereo.cas.category.CouchDbCategory'
-        excludeCategories 'org.apereo.cas.category.LdapCategory'
-        excludeCategories 'org.apereo.cas.category.MailCategory'
-        excludeCategories 'org.apereo.cas.category.MongoDbCategory'
-        excludeCategories 'org.apereo.cas.category.RedisCategory'
-        excludeCategories 'org.apereo.cas.category.MsSqlServerCategory'
-        excludeCategories 'org.apereo.cas.category.MySQLCategory'
+    useJUnitPlatform {
+        excludeTags "org.apereo.cas.category.CassandraCategory",
+                "org.apereo.cas.category.CosmosDbCategory",
+                "org.apereo.cas.category.CouchbaseCategory",
+                "org.apereo.cas.category.DynamoDbCategory",
+                "org.apereo.cas.category.FileSystemCategory",
+                "org.apereo.cas.category.IgniteCategory",
+                "org.apereo.cas.category.InfluxDbCategory",
+                "org.apereo.cas.category.CouchDbCategory",
+                "org.apereo.cas.category.LdapCategory",
+                "org.apereo.cas.category.MailCategory",
+                "org.apereo.cas.category.MariaDbCategory",
+                "org.apereo.cas.category.MemcachedCategory",
+                "org.apereo.cas.category.MongoDbCategory",
+                "org.apereo.cas.category.MsSqlServerCategory",
+                "org.apereo.cas.category.MySQLCategory",
+                "org.apereo.cas.category.PostgresCategory",
+                "org.apereo.cas.category.RedisCategory",
+                "org.apereo.cas.category.RadiusCategory",
+                "org.apereo.cas.category.AmazonWebServicesS3Category",
+                "org.apereo.cas.category.RestfulApiCategory"
     }
-    onlyIf {
-        "SIMPLE".equalsIgnoreCase(rootProject.testCategoryType)
-    }
+    enabled = "SIMPLE".equalsIgnoreCase(rootProject.testCategoryType) && !Boolean.getBoolean("skipTests")
 }
 
 tasks.withType(Test) {
-    exclude "**/Abstract*.*", "**/Base*.*"
-    enabled = !Boolean.getBoolean("skipTests")
+    exclude "**/Abstract*.*", "**/Base*.*", "**/*Suite.*"
+    include "**/*Tests.*"
     scanForTestClasses = false
     ignoreFailures = Boolean.getBoolean("ignoreTestFailures")
-    maxParallelForks = 1
+
+    doFirst {
+        maxParallelForks = project.ext.properties.get("maxParallelForksForTests", 2)
+        println "Maximum number of parallel forks is set to ${maxParallelForks}"
+    }
+
     failFast = true
-    jvmArgs "-Xmx1024m"
+    jvmArgs.addAll(["-Xms512m", "-Xmx4g"])
     classpath = it.classpath + files("${projectDir}/src/main/resources") + files("${projectDir}/src/test/resources")
     testLogging {
         events = ["FAILED", "STANDARD_OUT"]
@@ -182,5 +192,31 @@ tasks.withType(Test) {
         showExceptions = true
         showCauses = true
     }
-    enabled = rootProject.testCategoryType != null
+}
+
+def shouldTest(Set testSrc, String category) {
+    !Boolean.getBoolean("skipTests") && category.equalsIgnoreCase(rootProject.testCategoryType) && hasTestsOfCategory(testSrc, category)
+}
+
+def hasTestsOfCategory(Set testSrc, String category) {
+    def res = srcTagMap.computeIfAbsent(testSrc) {
+        def tags = new HashSet()
+        testSrc.each { src ->
+            try {
+                src.eachFileRecurse { file ->
+                    if (file ==~ /.*Tests\.\w+/) {
+                        file.readLines().parallelStream().forEach() { line ->
+                            def m = line =~ /^\s*@Category\((\w+)Category\.class\)\s*$/
+                            if (m) {
+                                tags.addAll(m.collect { it[1] })
+                            }
+                        }
+                    }
+                }
+            } catch (ignored) {
+            }
+        }
+        tags
+    }
+    res.contains(category)
 }
